log/build_2025-01-19_23-42-18/antenna/stdout_stderr.log
running develop
Removing /home/windowsuser/wifi_strength/install/antenna/lib/python3.10/site-packages/antenna.egg-link (link to .)
running egg_info
writing ../../build/antenna/antenna.egg-info/PKG-INFO
writing dependency_links to ../../build/antenna/antenna.egg-info/dependency_links.txt
writing entry points to ../../build/antenna/antenna.egg-info/entry_points.txt
writing requirements to ../../build/antenna/antenna.egg-info/requires.txt
writing top-level names to ../../build/antenna/antenna.egg-info/top_level.txt
reading manifest file '../../build/antenna/antenna.egg-info/SOURCES.txt'
writing manifest file '../../build/antenna/antenna.egg-info/SOURCES.txt'
running build
running build_py
copying antenna/strength.py -> /home/windowsuser/wifi_strength/build/antenna/build/lib/antenna
running install
running install_lib
creating /home/windowsuser/wifi_strength/install/antenna/lib/python3.10/site-packages/antenna
copying /home/windowsuser/wifi_strength/build/antenna/build/lib/antenna/strength.py -> /home/windowsuser/wifi_strength/install/antenna/lib/python3.10/site-packages/antenna
copying /home/windowsuser/wifi_strength/build/antenna/build/lib/antenna/__init__.py -> /home/windowsuser/wifi_strength/install/antenna/lib/python3.10/site-packages/antenna
byte-compiling /home/windowsuser/wifi_strength/install/antenna/lib/python3.10/site-packages/antenna/strength.py to strength.cpython-310.pyc
byte-compiling /home/windowsuser/wifi_strength/install/antenna/lib/python3.10/site-packages/antenna/__init__.py to __init__.cpython-310.pyc
running install_data
copying resource/antenna -> /home/windowsuser/wifi_strength/install/antenna/share/ament_index/resource_index/packages
copying package.xml -> /home/windowsuser/wifi_strength/install/antenna/share/antenna
  File "/home/windowsuser/wifi_strength/install/antenna/lib/python3.10/site-packages/antenna/strength.py", line 60
    self.pub.publish(msg
                    ^
SyntaxError: '(' was never closed

running install_egg_info
Copying ../../build/antenna/antenna.egg-info to /home/windowsuser/wifi_strength/install/antenna/lib/python3.10/site-packages/antenna-0.0.0-py3.10.egg-info
running install_scripts
Installing strength script to /home/windowsuser/wifi_strength/install/antenna/lib/antenna
writing list of installed files to '/home/windowsuser/wifi_strength/build/antenna/install.log'
